k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: messaging-service
  template:
    metadata:
      labels:
        app: messaging-service
    spec:
      containers:
        - name: messaging-service
          image: 147997140755.dkr.ecr.ap-south-1.amazonaws.com/messaging-service:latest
          ports:
            - containerPort: 8082
---

apiVersion: v1
kind: Service
metadata:
  name: messaging-service
spec:
  selector:
    app: messaging-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
  type: LoadBalancer
